--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ humanize = "*"
 psutil = "*"
 jishaku = {git = "https://github.com/Gorialis/jishaku"}
 discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
+python-aiml = "*"
 
 [dev-packages]
 
